<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

<TextView
    android:id="@+id/txt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:text="@string/wrt"


    />
    <TextView
        android:id="@+id/ct"
        android:visibility="invisible"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:paddingRight="20dp"
        android:textColor="@color/Mred"
        android:text="0"


        />
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:id="@+id/crd"
         android:layout_height="wrap_content"
         android:foreground="?android:attr/selectableItemBackground"
         android:layout_marginLeft="10dp"
         app:cardCornerRadius="8dp"
         android:clickable="true"
         android:layout_marginRight="10dp"
         android:layout_marginTop="40dp"
         >

         <EditText
             android:id="@+id/message"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:background="@null"
             android:hint="@string/hint"
             android:textSize="14sp"
             android:gravity="start"
             android:padding="9dp"
             android:inputType="textMultiLine"
             android:overScrollMode="always"
             android:scrollbarStyle="insideInset"
              />

     </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/wrt2"
        android:layout_below="@id/crd"

        />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_below="@id/txt2"
        android:id="@+id/crd2"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginLeft="10dp"
        app:cardCornerRadius="8dp"
        android:layout_marginRight="10dp"

        >

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="22sp"
            android:gravity="start"
            android:scrollHorizontally="true"
            android:padding="9dp"
            android:maxLines="1"
            android:layout_weight="1"
            android:inputType="number"
            />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/wrt3"
        android:layout_below="@id/crd2"

        />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_below="@id/txt3"
        android:id="@+id/crd3"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginLeft="10dp"
        app:cardCornerRadius="8dp"
        android:layout_marginRight="10dp"

        >

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="22sp"
            android:gravity="start"
            android:scrollHorizontally="true"
            android:padding="9dp"
            android:maxLines="1"
            android:layout_weight="1"

            android:inputType="textPassword"
            />

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_below="@id/crd3"
        android:layout_marginTop="25dp"
        android:id="@+id/crd4"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginLeft="10dp"
        app:cardCornerRadius="8dp"
        android:clickable="true"
        android:layout_marginRight="10dp"

        >

        <Button
            android:id="@+id/submit"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"

           android:text="  SEND ENCRYPTED MESSAGE  "
            />

    </android.support.v7.widget.CardView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob">
    </com.google.android.gms.ads.AdView>
 </RelativeLayout>

